added Connon Fodder tab. avoid Professions without any proficient skills. increased sling damage. allow Aikido to throw better from AI